packages/astro/test/fixtures/errors/src/pages/solid-syntax-error.astro
---
import SolidSyntaxError from '../components/SolidSyntaxError.jsx';
---

<div>
  <SolidSyntaxError />
</div>
